--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "permissions": [
     "webRequest",
     "webRequestBlocking",
-    "*://*.twitter.com/",
+    "*://*.twitter.com/*",
     "browsingData",
     "tabs"
   ],
@@ -20,5 +20,17 @@
     "default_popup": "popup/info.html"
   },
 
-  "icons": {"128": "128.png"}
+  "icons": {"128": "128.png"},
+  
+  "content_scripts": [
+      {
+        "matches": ["*://*.twitter.com/*"],
+        "js": ["content.js"],
+        "run_at": "document_end",
+        "css": ["bar.css"]
+      }
+ ],
+ "web_accessible_resources": [
+    "content.js"
+  ]
 }
