--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,11 @@
     "persistent": true
   },
 
-  "icons": {"128": "128.png"},
+  "icons": {
+    "16":"icon-16.png",
+    "48":"icon-48.png",
+    "128": "icon-128.png"
+  },
   
   "content_scripts": [
       {
